Multiple fixes to OpenJdkCookieManager to be able to support older APIs